Fix issue in console viewer